--- a/templates/community.html
+++ b/templates/community.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load role_lookup %}
+{% load utils %}
 
 {% block content %}
 {% with user_role=user_communities|get_community_role:community.id %}
@@ -11,8 +13,13 @@
             <div
                 class='w-full flex items-stretch justify-center h-[150px] rounded-lg border border-[#ffffff33] relative'>
 
-                <img id="community_banner" src="{{ community.banner }}" alt="Community Banner"
-                    class='object-cover w-full h-full rounded-lg' />
+
+                {% if community.banner|startswith:'https' %}
+                    <img id="community_banner" src="{{ community.banner }}" alt="Community Banner" class='object-cover w-full h-full rounded-lg' />
+                {% else %}
+                    <img id="community_banner" src="{% static community.banner %}" alt="Community Banner" class='object-cover w-full h-full rounded-lg' />
+                {% endif %}
+
 
                 {% if user_role == 'moderator' or user_role == 'admin' %}
                 <button onClick='set_is_editing(true); set_current_edit("Banner")' class='absolute right-3
@@ -31,9 +38,12 @@
                     <div
                         class="relative inline-flex items-center justify-center w-24 h-24 overflow-hidden rounded-full bg-white dark:bg-dark_1 p-2 {% if user_communities|get_community_role:community.id == 'admin' or 'moderator' %}cursor-pointer{%endif%}">
                         {% if community.avatar %}
+                            {% if community.avatar|startswith:'https' %}
+                                <img id="community_avatar" src="{{community.avatar}}" class="w-full h-full rounded-full object-cover" />
+                            {% else %}
+                                <img id="community_avatar" src="{% static community.avatar %}" class="w-full h-full rounded-full object-cover" />
 
-                        <img id="community_avatar" src="{{community.avatar}}"
-                            class="w-full h-full rounded-full object-cover" />
+                            {% endif %}
 
                         {% if user_role == 'moderator' or user_role == 'admin' %}
 
@@ -82,8 +92,9 @@
             <div class="w-[70%]">
                 {% include 'components/post/posts.html' %}
             </div>
-
-            {% include 'components/community/community_right_bar.html' %}
+            <div class="w-[30%]">
+                {% include 'components/community/community_right_bar.html' %}
+            </div>
         </div>
     </div>
 </div>
