--- a/templates/components/leftbar.html
+++ b/templates/components/leftbar.html
@@ -1,4 +1,7 @@
 {% load static %}
+{% load env_extras %}
+{% load utils %}
+
 <div
     class="flex flex-col gap-2 overflow-auto p-3 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed border-r border-dark_3 dark:bg-dark_3 dark:border-gray_1 shadow-md">
     <div>
@@ -45,9 +48,12 @@
             <a href="{% url 'community:community' community.name %}"
                 class="hover:bg-button_gray_hover flex flex-row gap-2 justify-start items-center px-3 py-1 rounded-lg w-full dark:hover:bg-gray_1">
                 <div class="rounded-full w-[30px] h-[30px] bg-gray-200 border border-black">
-                    {% if community.avatar%}
-                    <img src="{{ community.avatar}}" class="w-full h-full rounded-full object-cover"
-                        alt="{{ community.name }}" />
+                    {% if community.avatar %}
+                        {% if community.avatar|startswith:'https' %}
+                            <img class="w-full h-full rounded-full object-cover" src="{{community.avatar}}" alt="{{ community.name }}">
+                        {% else %}
+                            <img class="w-full h-full rounded-full object-cover" src="{% static community.avatar %}" alt="{{ community.name }}">
+                        {% endif %}
                     {% endif %}
                 </div>
                 <p>r/{{ community.name }}</p>
