--- a/templates/components/post/post_detail.html
+++ b/templates/components/post/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+{% load utils %}
 
 <div class="flex flex-row w-full relative top-[10vh]">
     {% include 'components/leftbar.html'%}
@@ -20,8 +22,11 @@
                     <div class="flex flex-col gap-3">
                         <div class="flex flex-row items-center gap-2">
                             <div class="rounded-full w-10 h-10 bg-gray-200 border border-black">
-                                <img class="w-full h-full rounded-full object-cover" src="{{ post.community.avatar }}"
-                                    alt="Community avatar">
+                                {% if post.community.avatar|startswith:'https'%}
+                                    <img class="w-full h-full rounded-full object-cover" src="{{ post.community.avatar }}" alt="Community avatar">
+                                {% else %}
+                                    <img class="w-full h-full rounded-full object-cover" src="{% static post.community.avatar %}" alt="Community avatar">
+                                {% endif %}
                             </div>
                             <div class="flex flex-col items-start justify-end gap-0 leading-none">
                                 <a href = "{% url 'community:community' post.community.name %}" class="font-medium text-sm">r/{{ post.community.name }}</a>
