--- a/templates/components/post/posts.html
+++ b/templates/components/post/posts.html
@@ -45,6 +45,7 @@
         .post-content {
             display: -webkit-box;
             -webkit-line-clamp: 50;
+            line-clamp: 50;
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis;
