--- a/templates/components/editor.html
+++ b/templates/components/editor.html
@@ -43,6 +43,11 @@
     </div>
 </div>
 
+<style>
+    html.dark .ql-editor.ql-blank::before {
+        color: white;
+    }
+</style>
 <script>
     // const quill = new Quill('#editor', {
     //     modules: {
@@ -51,6 +56,6 @@
     //     },
     //     placeholder: 'Compose an epic...',
     //     theme: 'snow',
-    // });
 
+    // });
 </script>
