--- a/templates/components/community/community_events.html
+++ b/templates/components/community/community_events.html
@@ -1,27 +1,29 @@
-{% if post is None %}
 <div class="w-full h-[1px] border-t "></div>
 
 <div class="flex flex-row gap-1 items-center font-medium">
-    <h1 class="text-txt_color_3 dark:text-white_2 text-md">RULES</h1>
+    <h1 class="text-txt_color_3 dark:text-white_2 text-md">UPCOMING EVENTS</h1>
     {% if user_role == 'moderator' or user_role == 'admin' %}
-    <button data-modal-target="create_community_rule" data-modal-toggle="create_community_rule"
-        class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 rounded-full p-2'>
+
+    <a href = "{% url 'community:create_event' community.name %}" class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 rounded-full p-2'>
+
         <svg width="14" height="14" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
         </svg>
-    </button>
+    </a>
     {% endif %}
 </div>
 
 <ol class="pl-2">
-    {% if community_rules|length > 0 %}
-    {% for rule in community_rules %}
-    <li class="border-b rounded-t dark:border-gray-600 mb-2">
-        <div class="flex flex-col gap-2 group">
-            <input type="checkbox" id="t-{{rule.id}}" class="peer hidden" onchange="handle_toggle_rule(event)" />
-            <label for="t-{{rule.id}}"
+    {% if community_events|length > 0 %}
+    {% for event in community_events %}
+    <i class="border-b rounded-t dark:border-gray-600 mb-2">
+        <a href = "{% url 'community:community_event_detail' event.community.name event.id %}" class="flex flex-col gap-2 group">
+            <label for="t-{{event.id}}"
                 class="flex flex-row justify-between items-center rounded-lg w-full cursor-pointer">
-                <p class="text-sm text-txt_color_3 font-base">{{rule.name}}</p>
+                <div class="flex flex-col gap-1">
+                    <p class="text-base text-txt_color_3 font-medium">{{event.name}}</p>
+                    <p class="text-sm text-txt_color_3">{{event.start_date}}</p>
+                </div>
                 <div class="flex flex-row gap-1 items-center">
                     {% if user_role == 'moderator' or user_role == 'admin' %}
                     <div>
@@ -36,7 +38,7 @@
                         </button>
                     </div>
 
-                    <button data-modal-target="delete_community_rule" data-modal-toggle="delete_community_rule"
+                    <button 
                         onclick="populate_delete_rule_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
                         <svg rpl="" fill="currentColor" height="14" icon-name="delete-outline" viewBox="0 0 20 20"
                             width="14" xmlns="http://www.w3.org/2000/svg">
@@ -46,22 +48,11 @@
                         </svg>
                     </button>
                     {% endif %}
-
-                    <svg id="cap-{{rule.id}}" fill="currentColor" height="20" viewBox="0 0 20 20" width="20"
-                        xmlns="http://www.w3.org/2000/svg" class="transition-transform">
-                        <path
-                            d="M10 13.125a.624.624 0 0 1-.442-.183l-5-5 .884-.884L10 11.616l4.558-4.558.884.884-5 5a.624.624 0 0 1-.442.183Z">
-                        </path>
-                    </svg>
                 </div>
             </label>
-            <div
-                class="peer-checked:max-h-[1000px] peer-checked:opacity-100 max-h-0 opacity-0 transition-all duration-300 overflow-hidden flex flex-col gap-2">
-                <p class="text-xs text-txt_color_3">{{rule.description}}</p>
-            </div>
-        </div>
+        </a>
     </li>
-    {%endfor%}
+    {% endfor %}
     {% else %}
     <div class="flex flex-row items-end gap2">
         <svg class = "dark:stroke-white_1" width="30" height="41" viewBox="0 0 50 61" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,19 +71,3 @@
     </div>
     {% endif %}
 </ol>
-{% endif %}
-
-<script>
-    function handle_toggle_rule(e) {
-        const id = e.target.id
-        const rule_id = id.slice(2);
-        const cap = document.getElementById(`cap-${rule_id}`)
-        if (e.target.checked) {
-            cap.classList.add('rotate-180')
-            cap.classList.remove('rotate-0')
-        } else {
-            cap.classList.remove('rotate-180')
-            cap.classList.add('rotate-0')
-        }
-    }
-</script>
