--- a/templates/base.html
+++ b/templates/base.html
@@ -240,6 +240,13 @@
             }
         };
 
+        function openModal(modalId) {
+            document.getElementById(modalId).classList.remove('hidden');
+        }
+
+        function closeModal(modalId) {
+            document.getElementById(modalId).classList.add('hidden');
+        }
     </script>
 
     {% block content %}
