--- a/templates/community.html
+++ b/templates/community.html
@@ -73,22 +73,34 @@
 
 
                 <div class='flex flex-row items-center gap-2'>
-                    <a href="{% url 'post:submit_with_community' community.name %}"
-                        class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 flex flex-row gap-2 rounded-2xl border border-white px-3 py-2 items-center'>
+                    <div 
+                        {% if user.is_authenticated %}
+                            onClick="window.location.href=`{% url 'post:submit_with_community' community.name %}`";
+                        {% else %}
+                            data-modal-target="sign_in_modal" data-modal-toggle="sign_in_modal"
+                        {% endif %}
+                        
+                        class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 flex flex-row gap-2 rounded-2xl border border-white px-3 py-2 items-center cursor-pointer'>
                         <svg rpl="" fill="currentColor" height="20" icon-name="add-outline" viewBox="0 0 20 20"
                             width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
                         </svg>
                         <p>Create Post</p>
-                    </a>
+                    </div>
                     {% if community not in user_communities%}
-                    <button class='px-2 py-1 border border-black rounded-lg'>Join</button>
+                        <button 
+                        {% if user.is_authenticated %}
+                            onClick="window.location.href=`{% url 'community:join_community' community.name %}`";
+                        {% else %}
+                            data-modal-target="sign_in_modal" data-modal-toggle="sign_in_modal"
+                        {% endif %}
+                        class='px-2 py-1 border border-black rounded-lg'>Join</button>
                     {% endif %}
                 </div>
             </div>
             {% endif %}
         </div>
-        <div class="flex flex-row gap-2">
+        <div class="flex flex-row gap-10">
             <div class="w-[70%]">
                 {% include 'components/post/posts.html' %}
             </div>
