--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css" />
+    <link rel="stylesheet" href="{% static 'css/flowbite.min.css'%}">
 
 
     {% block quill %}
@@ -251,7 +250,7 @@
 
     {% block content %}
     {% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+    <script src="{% static 'js/flowbite.min.js'%}"></script>
 </body>
 
 </html>
