--- a/templates/components/community/community_event_detail.html
+++ b/templates/components/community/community_event_detail.html
@@ -19,11 +19,28 @@
                     </button>
                 </div>
                 <div class="flex flex-col gap-3">
-                    {% if event.image|startswith:'https'%}
-                        <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{{ event.image }}" alt="Event image">
-                    {% else %}
-                        <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{% static event.image %}" alt="Event image">
-                    {% endif %}
+                    <div>
+                        {% if request.user.id == event.host.id %}
+                        <!-- TODO -->
+                            <div onClick='set_is_editing(true); set_current_edit("Avatar")' class='group flex
+                            items-center justify-center absolute transform right-1/2 translate-x-1/2 bottom-1/2
+                            translate-y-1/2 w-20 h-20 rounded-full hover:bg-[#666666]/50'>
+                                <svg class='opacity-0 group-hover:opacity-100' rpl="" fill="currentColor" height="16"
+                                    icon-name="edit-outline" viewBox="0 0 20 20" width="16"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
+                                    </path>
+                                </svg>
+                            </div>
+                        {% endif %}
+
+                        {% if event.image|startswith:'https'%}
+                            <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{{ event.image }}" alt="Event image">
+                        {% else %}
+                            <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{% static event.image %}" alt="Event image">
+                        {% endif %}
+                    </div>
                     
                     <a href = "{% url 'community:community' event.community.name %}" class="font-bold text-2xl flex flex-row gap-2 items-end">
                         <div class="rounded-full w-12 h-12 bg-gray-200 shadow-md">
