--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load utils %}
 <nav
-    class="shadow-md text-md fixed top-0 left-0 flex flex-row justify-between w-full p-3 px-6 items-center bg-white_1 border-b border-zinc-800 z-50 h-[10vh] dark:bg-dark_3 dark:border-gray_1">
+    class="shadow-md text-md fixed top-0 left-0 flex flex-row justify-between w-full p-3 px-6 items-center bg-white_1 border-b z-20  h-[10vh] dark:bg-dark_3 dark:border-gray_1">
     <div class="flex flex-row items-center gap-2">
         <a href="{% url 'account:dashboard' %}" class="font-bold text-2xl flex flex-row gap-1 items-center">
             <svg class="text-black" width="35" height="28" viewBox="0 0 37 30" fill="none"
@@ -136,12 +136,14 @@
             Log in
         </button>
 
-        {%include 'components/account/sign_in.html'%}
-        {%include 'components/account/sign_up.html'%}
         {% endif %}
     </div>
 </nav>
 
+{% if not request.user.is_authenticated %}
+    {%include 'components/account/sign_in.html'%}
+    {%include 'components/account/sign_up.html'%}
+{% endif %}
 
 <script>
     function toggleProfileOptions() {
@@ -192,6 +194,5 @@
                 localStorage.setItem('color-theme', 'dark');
             }
         }
-
     });
 </script>
