--- a/templates/components/post/posts.html
+++ b/templates/components/post/posts.html
@@ -1,13 +1,53 @@
 {% load static %} 
 {% load utils %}
 
+
 <div class="flex flex-col gap-4">
   {% for post in posts %}
   <div
     onclick="window.location.href=`{% url 'post:post' post.id %}`"
-    class="flex flex-col border dark:border-white_2 p-3 max-h-[400px] rounded-2xl hover:bg-gray-50 dark:hover:bg-dark_3 cursor-pointer"
+    class="flex flex-col border dark:border-white_2 p-3 max-h-[400px] rounded-2xl hover:bg-white_1 dark:hover:bg-dark_3 cursor-pointer shadow-md hover:shadow-xl transition-all duration-300 ease-in-out relative"
     id="{{post.id}}"
   >
+        {% if post.user == user %}
+        <button id="dropdownDefaultButton-{{post.id}}" onclick = "event.stopPropagation();" data-dropdown-toggle="dropdown-{{post.id}}" class="absolute top-5 right-5 hover:bg-button_gray_hover dark:hover:bg-dark_5 px-3 py-2 rounded-full">
+            <svg rpl="" fill="currentColor" height="16" icon-name="overflow-horizontal-fill" viewBox="0 0 20 20"
+                width="16" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M6 10a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm6 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z">
+                </path>
+            </svg>
+        </button>
+
+        <div id="dropdown-{{post.id}}" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
+            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton-{{post.id}}">
+              <li>
+                <button class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+                    <svg rpl="" fill="currentColor" height="20" icon-name="edit-outline" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z"></path>
+                    </svg>
+                    <p>
+                        Edit post
+                    </p>
+                </button>
+              </li>
+              <li>
+                <button onclick="event.stopPropagation(); populate_delete_post_modal_input_values('{{post.id}}')" data-modal-target="delete-post-modal" data-modal-toggle="delete-post-modal" class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+                    <svg rpl="" fill="currentColor" height="20" icon-name="delete-outline" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.751 6.023 17 6.106l-.761 11.368a2.554 2.554 0 0 1-.718 1.741A2.586 2.586 0 0 1 13.8 20H6.2a2.585 2.585 0 0 1-1.718-.783 2.553 2.553 0 0 1-.719-1.737L3 6.106l1.248-.083.761 11.369c-.005.333.114.656.333.908.22.252.525.415.858.458h7.6c.333-.043.64-.207.859-.46.22-.254.338-.578.332-.912l.76-11.363ZM18 2.983v1.243H2V2.983h4v-.372A2.737 2.737 0 0 1 6.896.718 2.772 2.772 0 0 1 8.875.002h2.25c.729-.03 1.44.227 1.979.716.538.488.86 1.169.896 1.893v.372h4Zm-10.75 0h5.5v-.372a1.505 1.505 0 0 0-.531-1.014 1.524 1.524 0 0 0-1.094-.352h-2.25c-.397-.03-.79.097-1.094.352-.304.256-.495.62-.531 1.014v.372Z"></path>
+                    </svg>
+                    <p>
+                        Delete 
+                    </p>
+                </button>
+              </li>
+            </ul>
+        </div>
+
+
+
+        {%endif %}
+
         <style>
             .post-content img {
                 max-width: 100%;
@@ -155,10 +195,10 @@
                 </div>
             </div>
         </div>
-     
   </div>
   {% endfor %}
 </div>
+
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
