--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
 <div class="flex flex-row w-full relative top-[10vh]">
     {% include 'components/leftbar.html'%}
 
-    <div class="p-10 w-[85%] relative left-[15%] flex flex-row gap-10 z-10">
+    <div class="p-10 w-[85%] relative left-[15%] flex flex-row gap-10 ">
         <div class="w-[75%]">
             {% include 'components/post/posts.html' %}
         </div>
@@ -21,6 +21,6 @@
     </div>
 </div>
 
-{% include 'components/post/delete_post_modal.html' %}
+
 {% endblock %}
 
