--- a/templates/components/community/create_community.html
+++ b/templates/components/community/create_community.html
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="flex flex-col items-center">
-                    <div class="flex flex-row justify-between w-full">
+                    <div class="flex flex-row justify-between w-full items-center">
                         <label ondragover="event.preventDefault()" ondragenter="event.preventDefault()"
                             ondragleave="event.preventDefault()" ondrop="handle_file_drop(event)" for="public"
                             class="w-full flex flex-row gap-4 items-center px-3 py-2">
@@ -152,25 +152,7 @@
                         </label>
                         <input type="radio" id="public" name="visibility" value="public" checked />
                     </div>
-                    <div class="flex flex-row justify-between w-full">
-                        <label for="private" class="w-full flex flex-row gap-4 items-center px-3 py-2">
-                            <div>
-                                <svg rpl="" fill="currentColor" height="20" icon-name="lock-outline" viewBox="0 0 20 20"
-                                    width="20" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M16.375 8H15V5.312A5.17 5.17 0 0 0 10 0a5.169 5.169 0 0 0-5 5.312V8H3.625A1.629 1.629 0 0 0 2 9.63v7.74A1.629 1.629 0 0 0 3.625 19h12.75A1.629 1.629 0 0 0 18 17.37V9.63A1.629 1.629 0 0 0 16.375 8ZM6.25 5.312A3.92 3.92 0 0 1 10 1.25a3.92 3.92 0 0 1 3.75 4.062V8h-7.5V5.312Zm10.5 12.058a.378.378 0 0 1-.375.38H3.625a.378.378 0 0 1-.375-.38V9.63a.383.383 0 0 1 .375-.38h12.75a.378.378 0 0 1 .375.38v7.74Z">
-                                    </path>
-                                </svg>
-                            </div>
-
-                            <div>
-                                <p class="font-semibold">Private</p>
-                                <p>Anyone can view, but only approved users can contribute</p>
-                            </div>
-                        </label>
-                        <input type="radio" id="private" name="visibility" value="private" />
-                    </div>
-                    <div class="flex flex-row justify-between w-full">
+                    <div class="flex flex-row justify-between w-full items-center">
                         <label for="restricted" class="w-full flex flex-row gap-4 items-center px-3 py-2">
                             <div>
                                 <svg rpl="" fill="currentColor" height="20" icon-name="views-outline"
@@ -187,6 +169,24 @@
                             </div>
                         </label>
                         <input type="radio" id="restricted" name="visibility" value="restricted" />
+                    </div>
+                    <div class="flex flex-row justify-between w-full items-center">
+                        <label for="private" class="w-full flex flex-row gap-4 items-center px-3 py-2">
+                            <div>
+                                <svg rpl="" fill="currentColor" height="20" icon-name="lock-outline" viewBox="0 0 20 20"
+                                    width="20" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16.375 8H15V5.312A5.17 5.17 0 0 0 10 0a5.169 5.169 0 0 0-5 5.312V8H3.625A1.629 1.629 0 0 0 2 9.63v7.74A1.629 1.629 0 0 0 3.625 19h12.75A1.629 1.629 0 0 0 18 17.37V9.63A1.629 1.629 0 0 0 16.375 8ZM6.25 5.312A3.92 3.92 0 0 1 10 1.25a3.92 3.92 0 0 1 3.75 4.062V8h-7.5V5.312Zm10.5 12.058a.378.378 0 0 1-.375.38H3.625a.378.378 0 0 1-.375-.38V9.63a.383.383 0 0 1 .375-.38h12.75a.378.378 0 0 1 .375.38v7.74Z">
+                                    </path>
+                                </svg>
+                            </div>
+
+                            <div>
+                                <p class="font-semibold">Private</p>
+                                <p>Only approved users can view and contribute</p>
+                            </div>
+                        </label>
+                        <input type="radio" id="private" name="visibility" value="private" />
                     </div>
                 </div>
             </div>
