--- a/templates/components/post/posts.html
+++ b/templates/components/post/posts.html
@@ -1,259 +1,13 @@
-{% load static %} 
-{% load utils %}
 
 
 <div class="flex flex-col gap-4">
   {% for post in posts %}
-  <div
-    onclick="window.location.href=`{% url 'post:post' post.id %}`"
-    class="flex flex-col border dark:border-white_2 p-3 max-h-[400px] rounded-2xl hover:bg-white_1 dark:hover:bg-dark_3 cursor-pointer shadow-md hover:shadow-xl transition-all duration-300 ease-in-out relative"
-    id="{{post.id}}"
-  >
-        {% if post.user == user %}
-        <button id="dropdownDefaultButton-{{post.id}}" onclick = "event.stopPropagation();" data-dropdown-toggle="dropdown-{{post.id}}" class="absolute top-5 right-5 hover:bg-button_gray_hover dark:hover:bg-dark_5 px-3 py-2 rounded-full">
-            <svg rpl="" fill="currentColor" height="16" icon-name="overflow-horizontal-fill" viewBox="0 0 20 20"
-                width="16" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M6 10a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm6 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z">
-                </path>
-            </svg>
-        </button>
-
-        <div id="dropdown-{{post.id}}" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
-            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton-{{post.id}}">
-              <li>
-                <button class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                    <svg rpl="" fill="currentColor" height="20" icon-name="edit-outline" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z"></path>
-                    </svg>
-                    <p>
-                        Edit post
-                    </p>
-                </button>
-              </li>
-              <li>
-                <button onclick="event.stopPropagation(); populate_delete_post_modal_input_values('{{post.id}}')" data-modal-target="delete-post-modal" data-modal-toggle="delete-post-modal" class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                    <svg rpl="" fill="currentColor" height="20" icon-name="delete-outline" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M15.751 6.023 17 6.106l-.761 11.368a2.554 2.554 0 0 1-.718 1.741A2.586 2.586 0 0 1 13.8 20H6.2a2.585 2.585 0 0 1-1.718-.783 2.553 2.553 0 0 1-.719-1.737L3 6.106l1.248-.083.761 11.369c-.005.333.114.656.333.908.22.252.525.415.858.458h7.6c.333-.043.64-.207.859-.46.22-.254.338-.578.332-.912l.76-11.363ZM18 2.983v1.243H2V2.983h4v-.372A2.737 2.737 0 0 1 6.896.718 2.772 2.772 0 0 1 8.875.002h2.25c.729-.03 1.44.227 1.979.716.538.488.86 1.169.896 1.893v.372h4Zm-10.75 0h5.5v-.372a1.505 1.505 0 0 0-.531-1.014 1.524 1.524 0 0 0-1.094-.352h-2.25c-.397-.03-.79.097-1.094.352-.304.256-.495.62-.531 1.014v.372Z"></path>
-                    </svg>
-                    <p>
-                        Delete 
-                    </p>
-                </button>
-              </li>
-            </ul>
-        </div>
-
-
-
-        {%endif %}
-
-        <style>
-            .post-content img {
-                max-width: 100%;
-                height: 250px;
-            }
-            .post-content {
-                display: -webkit-box;
-                -webkit-line-clamp: 50;
-                line-clamp: 50;
-                -webkit-box-orient: vertical;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-        </style>
-
-        <div class="flex flex-row gap-2 items-end">
-            {% if community %}
-                <div class="rounded-full w-6 h-6">
-                    {% if post.user.avatar %} {% if post.user.avatar|startswith:'https' %}
-                        <img
-                          class="w-full h-full rounded-full object-cover"
-                          src="{{ post.user.avatar }}"
-                          alt="Post author avatar"
-                        />
-                    {% else %}
-                        <img
-                          class="w-full h-full rounded-full object-cover"
-                          src="{% static post.user.avatar %}"
-                          alt="Post author avatar"
-                        />
-                    {% endif %} {% else %}
-                        <svg
-                          class="rounded-full object-cover"
-                          viewBox="0 0 43 46"
-                          fill="none"
-                          xmlns="http://www.w3.org/2000/svg"
-                        >
-                          <path
-                            d="M21.5541 0.239041C20.1124 0.228164 18.6835 0.510109 17.3541 1.06779C16.0603 1.59654 14.9128 2.37279 13.9566 3.37404V3.38529L13.9528 3.39279C13.0228 4.40154 12.3028 5.61279 11.8003 6.99279C11.2866 8.36904 11.0391 9.87654 11.0391 11.4928C11.0391 13.124 11.2828 14.6465 11.8003 16.0265C12.3066 17.3803 13.0266 18.5765 13.9528 19.589L13.9566 19.5965C14.9091 20.5978 16.0491 21.3853 17.3353 21.9365V21.9478C18.6328 22.4765 20.0466 22.7353 21.5353 22.7353C23.0166 22.7353 24.4228 22.4765 25.7241 21.9478V21.9403C27.0103 21.389 28.1391 20.6015 29.0691 19.5965C30.0253 18.5915 30.7566 17.384 31.2666 16.0265C31.7841 14.6465 32.0316 13.124 32.0316 11.489H32.0691C32.0691 9.87654 31.8253 8.37279 31.3078 6.99654C30.8316 5.65525 30.0849 4.4261 29.1141 3.38529C28.1768 2.37494 27.0283 1.58366 25.7503 1.06779C24.421 0.509607 22.9958 0.227641 21.5541 0.239041ZM21.6441 30.2465C12.9553 30.2465 8.29031 31.0453 4.82156 33.659C3.08906 34.9715 1.94531 36.7528 1.30031 38.8265C0.655312 40.9003 0.452813 42.4828 0.445312 45.239L21.5541 45.2465H42.6628C42.6591 42.4865 42.4678 40.9003 41.8191 38.8265C41.1741 36.7528 40.0303 34.9753 38.2941 33.6665C34.8328 31.0528 30.3291 30.2465 21.6441 30.2465Z"
-                            fill="#808080"
-                          />
-                        </svg>
-                    {% endif %}
-                </div>
-                <p>u/{{ post.user.username }}</p>
-            {% else %}
-                <a
-                  href="{% url 'community:community' post.community.name %}"
-                  class="flex flex-row gap-1 items-end"
-                >
-                    {%if post.community.avatar|startswith:'https'%}
-                        <img
-                            class="w-7 h-7 rounded-full"
-                            src="{{post.community.avatar}}"
-                            alt="Community avatar"
-                        />
-                    {% else %}
-                        <img
-                            class="w-7 h-7 rounded-full"
-                            src="{% static post.community.avatar %}"
-                            alt="Community avatar"
-                        />
-                    {% endif %} 
-                    <p>
-                        r/{{ post.community.name }}
-                    </p>
-                </a>
-            {% endif %}
-            <p>•</p>
-            <p data-created-at="{{ post.created_at }}">{{ post.created_at }}</p>
-        </div>
-        <h1 class="font-bold text-xl">{{ post.title }}</h1>
-        <span class="post-content">{{ post.content }}</span>
-
-        <!-- VOTES AND COMMENTS -->
-        <!-- VOTES -->
-
-        <div class="flex flex-row gap-2 mt-4">
-            <div class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray">
-                <button
-                    onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'upvote')"
-                    class=""
-                    {% if not user.is_authenticated %}
-                    disabled
-                    {% endif %}
-                >
-                  <svg
-                    class="dark:fill-white"
-                    width="16"
-                    height="20"
-                    viewBox="0 0 16 20"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <g clip-path="url(#clip0_336_4807)">
-                      <path
-                        d="M10.2963 18.5602H5.69542C5.4574 18.5596 5.22925 18.4439 5.06094 18.2383C4.89263 18.0327 4.79789 17.7539 4.79747 17.4631V10.7452H1.69982C1.52557 10.74 1.35639 10.6724 1.21327 10.5509C1.07014 10.4293 0.959353 10.2591 0.894627 10.0614C0.811785 9.8498 0.780624 9.61351 0.804874 9.38084C0.829124 9.14816 0.907758 8.92895 1.03136 8.74946L7.329 0.359134C7.41375 0.245982 7.5169 0.155692 7.63186 0.0940402C7.74681 0.0323887 7.87103 0.000733998 7.99657 0.0011018C8.12211 0.00146961 8.24621 0.0338518 8.36092 0.0961762C8.47563 0.158501 8.57843 0.249394 8.66273 0.363041L14.9572 8.74556C15.0821 8.92506 15.1619 9.1449 15.1869 9.37855C15.2118 9.61221 15.1809 9.8497 15.0979 10.0624C15.0334 10.2599 14.9228 10.4299 14.78 10.5515C14.6372 10.673 14.4683 10.7407 14.2943 10.7462H11.1943V17.4641C11.1936 17.7547 11.0988 18.0332 10.9305 18.2386C10.7622 18.444 10.5342 18.5596 10.2963 18.5602ZM5.79697 17.3391H10.1948V9.52412H14.14L7.99587 1.27934L1.80537 9.52412H5.79697V17.3391ZM1.78058 9.55734L1.77099 9.57297C1.77898 9.5671 1.78218 9.5632 1.78058 9.55734Z"
-                        fill="black"
-                      />
-                    </g>
-                    <defs>
-                      <clipPath id="clip0_336_4807">
-                        <rect width="15.992" height="19.5374" fill="white" />
-                      </clipPath>
-                    </defs>
-                  </svg>
-                </button>
-                <h1 class="vote_count"
-                data-voted = "{% if post in user_upvoted_posts%}upvote{%elif post in user_downvoted_posts %}downvote{%endif%}"
-                >{{ post|get_vote_counts}}</h1>
-                <button
-                  onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'downvote')"
-                  {% if not user.is_authenticated %}
-                  disabled
-                  {% endif %}
-                >
-                  <svg
-                    width="16"
-                    height="17"
-                    viewBox="0 0 16 17"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M7.99952 16.6355C7.87366 16.6355 7.74922 16.608 7.63427 16.5548C7.51933 16.5016 7.41645 16.4239 7.33232 16.3268L1.03472 9.20538C0.909951 9.05291 0.830289 8.8663 0.805311 8.66799C0.780333 8.46968 0.811102 8.2681 0.893919 8.0875C0.958571 7.91977 1.06917 7.77537 1.21206 7.67212C1.35494 7.56888 1.52385 7.51132 1.69792 7.50656H4.79952V1.79929C4.79994 1.55225 4.89473 1.31545 5.06312 1.14077C5.23151 0.96608 5.45978 0.867748 5.69792 0.86731H10.3011C10.5393 0.867748 10.7675 0.96608 10.9359 1.14077C11.1043 1.31545 11.1991 1.55225 11.1995 1.79929V7.50656H14.2987C14.4731 7.511 14.6423 7.56841 14.7855 7.67168C14.9287 7.77494 15.0396 7.91952 15.1043 8.0875C15.1874 8.26749 15.2187 8.46853 15.1945 8.66652C15.1702 8.86451 15.0914 9.05103 14.9675 9.20372L8.66672 16.3318C8.58197 16.4277 8.47886 16.5043 8.36398 16.5566C8.2491 16.6089 8.12497 16.6358 7.99952 16.6355ZM1.85232 8.54395L7.99952 15.5484L14.1923 8.54395H10.1995V1.90469H5.79952V8.54395H1.85232ZM14.2275 8.50245C14.2195 8.50245 14.2163 8.50826 14.2179 8.51324L14.2275 8.50245Z"
-                      fill="black"
-                    />
-                  </svg>
-                </button>
-            </div>
-
-            <!-- COMMENTS -->
-            <div class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray">
-                <div class="flex flex-row gap-2">
-                    <button onclick="window.location.href=`{% url 'post:post' post.id %}`"
-                    {% if not user.is_authenticated %}
-                    disabled
-                    {% endif %} 
-                    >
-                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M7.725 19.872C7.60442 19.8727 7.48561 19.843 7.37952 19.7857C7.27343 19.7284 7.1835 19.6452 7.118 19.544C7.0409 19.426 6.99989 19.288 7 19.147V16H3.625C2.92921 15.9987 2.2623 15.7217 1.7703 15.2297C1.27831 14.7377 1.00132 14.0708 1 13.375V3.625C1.00106 2.92913 1.27796 2.26207 1.77001 1.77001C2.26207 1.27796 2.92913 1.00106 3.625 1H16.375C17.0708 1.00132 17.7377 1.27831 18.2297 1.7703C18.7217 2.2623 18.9987 2.92921 19 3.625V13.375C18.9987 14.0708 18.7217 14.7377 18.2297 15.2297C17.7377 15.7217 17.0708 15.9987 16.375 16H12.214L8.214 19.681C8.08058 19.8035 7.90614 19.8717 7.725 19.872ZM3.625 2.25C3.26049 2.25053 2.91106 2.39556 2.65331 2.65331C2.39556 2.91106 2.25053 3.26049 2.25 3.625V13.375C2.25053 13.7395 2.39556 14.0889 2.65331 14.3467C2.91106 14.6044 3.26049 14.7495 3.625 14.75H7.625C7.79076 14.75 7.94973 14.8158 8.06694 14.9331C8.18415 15.0503 8.25 15.2092 8.25 15.375V17.95L11.55 14.915C11.6657 14.8089 11.817 14.7501 11.974 14.75H16.374C16.7385 14.7495 17.0879 14.6044 17.3457 14.3467C17.6034 14.0889 17.7485 13.7395 17.749 13.375V3.625C17.7485 3.26066 17.6036 2.91138 17.346 2.65367C17.0885 2.39595 16.7393 2.25079 16.375 2.25H3.625Z" fill="black"/>
-                        </svg>   
-                      </button>
-                    <h1 class="vote_count">{{ post|get_comment_counts }}</h1>
-                </div>
-            </div>
-        </div>
-  </div>
+    <div
+        onclick="window.location.href=`{% url 'post:post' post.id %}`"
+        class="flex flex-col border dark:border-white_2 p-3 max-h-[400px] rounded-2xl hover:bg-white_1 dark:hover:bg-dark_3 cursor-pointer shadow-md hover:shadow-xl transition-all duration-300 ease-in-out relative"
+        id="{{post.id}}"
+    >
+        {% include 'components/post/post_item.html' with post=post %}
+    </div>
   {% endfor %}
 </div>
-
-
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const postContents = document.querySelectorAll(".post-content");
-        postContents.forEach((postContent) => {
-            postContent.innerHTML = postContent.textContent;
-        });
-
-        const createdAtElements = document.querySelectorAll("[data-created-at]");
-        for (const createdAtElement of createdAtElements) {
-          const createdAt = createdAtElement.getAttribute("data-created-at");
-          createdAtElement.textContent = timeAgo(createdAt);
-        }
-    });
-
-    async function vote(button, postId, voteType) {
-        await fetch(`/post/vote/${postId}/${voteType}`, {
-            method: "POST",
-            headers: {
-              "X-CSRFToken": "{{ csrf_token }}",
-            },
-        }).then(async (response) => {
-            const data = await response.json();
-
-            let vote_count = document.getElementById(postId).querySelector(".vote_count");
-            let current_vote_count = parseInt(vote_count.textContent, 10); 
-
-            voted = vote_count.dataset.voted
-
-            if(voted == "upvote"){
-                if(voteType == "upvote"){
-                    current_vote_count -= 1 
-                    vote_count.dataset.voted = ""
-                }else{
-                    current_vote_count -= 2
-                    vote_count.dataset.voted = "downvote"
-                }
-            }else if (voted == "downvote"){
-                if(voteType == "downvote"){
-                    current_vote_count += 1
-                    vote_count.dataset.voted = ""
-                }else{
-                    current_vote_count += 2
-                    vote_count.dataset.voted = "upvote"
-                }
-            }else{
-                if(voteType == "downvote"){
-                    current_vote_count -= 1
-                    vote_count.dataset.voted = "downvote"
-                }else{
-                    current_vote_count += 1
-                    vote_count.dataset.voted = "upvote"
-                }
-            }
-            vote_count.textContent = current_vote_count
-        });
-    }
-</script>
