--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ csrf_token }}">
     {% load static %}
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" /> -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src = "{% static 'js/tailwind.js'%}"></script>
     <link rel="stylesheet" href="{% static 'css/flowbite.min.css'%}">
-
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script> -->
 
     {% block quill %}
     {% endblock %}
@@ -218,7 +218,6 @@
         } 
 
         function timeAgo(datetime) {
-            console.log(datetime)
             const currentDate = new Date();
             const createdAt = new Date(parseDateString(datetime));
             const timeDifference = currentDate.getTime() - createdAt.getTime();
