--- a/templates/components/community/community_right_bar.html
+++ b/templates/components/community/community_right_bar.html
@@ -57,3 +57,6 @@
     {%include 'components/community/community_events.html' %}
 
 </div>
+{% if user_role == 'moderator' or user_role == 'admin' %}
+{% include 'components/community/delete_community_event_modal.html' %}
+{% endif %}
